added some more pages

--- a/index.html
+++ b/index.html
@@ -27,7 +27,16 @@
   <div class="title">
   <marquee><p>Punchlove</p></marquee>
   </div>
+
+  <div class="menu">
+    <a href="music.html">LINK TO MUSIC</a>
+    <a href="videos.html">Link To VIDEOS</a>
+    <a href="pedals.html">Link To PEDALboard</a>
+  </div>
   
+
+
+
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
