--- a/index.html
+++ b/index.html
@@ -35,15 +35,16 @@
   </div>
   
 
-
-
-
+  <a class="twitter-timeline" data-height="221" data-height="250" href="https://twitter.com/punchlovemusic?ref_src=twsrc%5Etfw">Tweets by punchlovemusic</a>
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
     window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
     ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script>
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+
 </body>
 
 </html>
