added iphone template + some prelimenary pedal work

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     <a href="pedals.html">Link To PEDALboard</a>
   </div>
   
-
+  <div class="iphone" onclick="window.open('apps.html', 'mywindow')">
+    <img src="img/iphone.png">
+  </div>
   <a class="twitter-timeline" data-height="221" data-height="250" href="https://twitter.com/punchlovemusic?ref_src=twsrc%5Etfw">Tweets by punchlovemusic</a>
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
