--- a/apps.html
+++ b/apps.html
@@ -29,11 +29,14 @@
   </div>
 
   <div style="position: relative;">
-    <img src="img/iphone2.png" style="width: 100%; height: auto;">
-    <a href="pedals.html"><div class="app" style="position: absolute; left: 52%; top: 38%; width: 10%; height: 10%;"><img src="img/twit.png" width="100%"></div></a>
-    <a href="music.html"><div  class="app" style="position: absolute; left: 42%; top: 28%; width: 10%; height: 10%;"><img src="img/soundcloud.png" width="100%"></div></a>
-    <a href="https://punchlove.bandcamp.com/" target="_blank"><div class="app" style="position: absolute; left: 50%; top: 50%; width: 10%; height: 10%;"><img src="img/bandcamp.png" width="100%"></div></a>
-</div>
+      <img src="img/iphone2.png" style="width: 100%; height: auto;">
+      <a href="twitter.html"><div class="app" style="position: absolute; left: 57%; top: 20%; width: 10%; height: 10%;"><img src="img/twit.png" width="100%"></div></a>
+      <a href="https://soundcloud.com/user-209600053-646301370" target="_blank"><div class="app" style="position: absolute; left: 44.5%; top: 20%; width: 10%; height: 10%;"><img src="img/soundcloud2.png" width="100%"></div></a>
+      <a href="https://punchlove.bandcamp.com/" target="_blank"><div class="app" style="position: absolute; left: 32%; top: 20%; width: 10%; height: 10%;"><img src="img/bandcamp.png" width="100%"></div></a>
+      <a href="https://open.spotify.com/artist/5Tbdx7OG835TPTxnEgfNiW" target="_blank"><div class="app" style="position: absolute; left: 32%; top: 32.5%; width: 10%; height: 10%;"><img src="img/spotify.png" width="100%"></div></a>
+      <a href="https://www.instagram.com/punchlovemusic/" target="_blank"><div class="app" style="position: absolute; left: 44.5%; top: 32.5%; width: 10%; height: 10%;"><img src="img/instagram.png" width="100%"></div></a>
+
+  </div>
   
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
