--- a/pedals.html
+++ b/pedals.html
@@ -28,7 +28,12 @@
   <marquee><p>PEDAL BOARD YEAH BUILD YOUR OWN PEDAL BOARD</p></marquee>
   </div>
 
-
+  <div style="position: relative;">
+    <img src="img/pedalboard.png" style="width: 100%; height: auto;">
+    <a href="twitter.html"><div class="app" style="position: absolute; left: 57%; top: 20%; width: 10%; height: 10%;"><img src="img/twit.png" width="100%"></div></a>
+      <a href="https://soundcloud.com/user-209600053-646301370" target="_blank"><div class="app" style="position: absolute; left: 44.5%; top: 20%; width: 10%; height: 10%;"><img src="img/soundcloud2.png" width="100%"></div></a>
+      <a href="https://punchlove.bandcamp.com/" target="_blank"><div class="app" style="position: absolute; left: 32%; top: 20%; width: 10%; height: 10%;"><img src="img/bandcamp.png" width="100%"></div></a>
+</div>
   
 
     <div id="pedal1" class="pedal">
@@ -47,7 +52,7 @@
         <img src="img/pedal1.png" width="100px">
     </div>
 
-    <div id="slot1" class="slot">
+    <!-- <div id="slot1" class="slot">
 
     </div>
 
@@ -62,7 +67,7 @@
     </div>
     <div id="slot5" class="slot">
         
-    </div>
+    </div> -->
 
 
     <audio controls autoplay>
