more gifs, added photos

--- a/apps.html
+++ b/apps.html
@@ -30,11 +30,20 @@
 
   <div style="position: relative;">
       <img src="img/iphone2.png" style="width: 100%; height: auto;">
-      <a href="twitter.html"><div class="app" style="position: absolute; left: 57%; top: 20%; width: 10%; height: 10%;"><img src="img/twit.png" width="100%"></div></a>
-      <a href="https://soundcloud.com/user-209600053-646301370" target="_blank"><div class="app" style="position: absolute; left: 44.5%; top: 20%; width: 10%; height: 10%;"><img src="img/soundcloud2.png" width="100%"></div></a>
-      <a href="https://punchlove.bandcamp.com/" target="_blank"><div class="app" style="position: absolute; left: 32%; top: 20%; width: 10%; height: 10%;"><img src="img/bandcamp.png" width="100%"></div></a>
-      <a href="https://open.spotify.com/artist/5Tbdx7OG835TPTxnEgfNiW" target="_blank"><div class="app" style="position: absolute; left: 32%; top: 32.5%; width: 10%; height: 10%;"><img src="img/spotify.png" width="100%"></div></a>
-      <a href="https://www.instagram.com/punchlovemusic/" target="_blank"><div class="app" style="position: absolute; left: 44.5%; top: 32.5%; width: 10%; height: 10%;"><img src="img/instagram.png" width="100%"></div></a>
+
+      <a href="twitter.html"><div class="app" style="position: absolute; left: 57%; top: 20%; width: 10%; height: 10%;"><img src="img/icons/twit.png" width="100%"></div></a>
+      <a href="https://soundcloud.com/user-209600053-646301370" target="_blank"><div class="app" style="position: absolute; left: 44.5%; top: 20%; width: 10%; height: 10%;"><img src="img/icons/soundcloud2.png" width="100%"></div></a>
+      <a href="https://punchlove.bandcamp.com/" target="_blank"><div class="app" style="position: absolute; left: 32%; top: 20%; width: 10%; height: 10%;"><img src="img/icons/bandcamp.png" width="100%"></div></a>
+      <a href="https://open.spotify.com/artist/5Tbdx7OG835TPTxnEgfNiW" target="_blank"><div class="app" style="position: absolute; left: 32%; top: 32.5%; width: 10%; height: 10%;"><img src="img/icons/spotify.png" width="100%"></div></a>
+      <a href="https://www.instagram.com/punchlovemusic/" target="_blank"><div class="app" style="position: absolute; left: 44.5%; top: 32.5%; width: 10%; height: 10%;"><img src="img/icons/instagram.png" width="100%"></div></a>
+      <a href="https://music.apple.com/artist/punchlove/1545713753" target="_blank"><div class="app" style="position: absolute; left: 57%; top: 32.5%; width: 10%; height: 10%;"><img src="img/icons/applemusic.png" width="100%"></div></a>
+      <a href="https://www.facebook.com/punchlovemusic/" target="_blank"><div class="app" style="position: absolute; left: 32%; top: 45%; width: 10%; height: 10%;"><img src="img/icons/facebook.png" width="100%"></div></a>
+      <a href="pedals.html"><div class="app" style="position: absolute; left: 44.5%; top: 45%; width: 10%; height: 10%;"><img src="img/icons/pedal_icon.png" width="100%"></div></a>
+      <a href="contact.html"><div class="app" style="position: absolute; left: 57%; top: 45%; width: 10%; height: 10%;"><img src="img/icons/thunderbird.png" width="100%"></div></a>
+
+      <a href="photos.html"><div class="app" style="position: absolute; left: 32%; top: 69%; width: 10%; height: 10%;"><img src="img/icons/camera.png" width="100%"></div></a>
+      <a href="photos2.html"><div class="app" style="position: absolute; left: 44.5%; top: 69%; width: 10%; height: 10%;"><img src="img/icons/camera.png" width="100%"></div></a>
+      <a href="photos_for_real.html"><div class="app" style="position: absolute; left: 57%; top: 69%; width: 10%; height: 10%;"><img src="img/icons/camera.png" width="100%"></div></a>
 
   </div>
   
