--- a/photos.html
+++ b/photos.html
@@ -28,7 +28,7 @@
   </div>
   <h1></h1>
 <div class="mainImage">
-  <img id="mainPhoto" src="img/ponchlonch.png">
+  <img id="mainPhoto" src="img/photos/ponchlonch.png">
 </div>
 <div class="myGallery">
   <img class="galleryPhoto" src="https://picsum.photos/190/190?1" />
