--- a/photos2.html
+++ b/photos2.html
@@ -28,7 +28,7 @@
   </div>
   <h1></h1>
 <div class="mainImage">
-  <img id="mainPhoto" src="img/ponchlonch.png">
+  <img id="mainPhoto" src="img/photos/IMG_2427.JPG">
 </div>
 <div class="myGallery">
   <img class="galleryPhoto" src="https://picsum.photos/190/190?1" />
@@ -40,7 +40,7 @@
   <img class="galleryPhoto" src="https://picsum.photos/190/190?7" />
   <img class="galleryPhoto" src="https://picsum.photos/190/190?8" />
   <img class="galleryPhoto" src="https://picsum.photos/190/190?9" />
-  <img class="galleryPhoto" src="https://picsum.photos/190/190?10" />
+  <a href="pedals.html"><img class="galleryPhoto" src="https://picsum.photos/190/190?10" /></a>
 </div>
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
