random real photos

--- a/photos_for_real.html
+++ b/photos_for_real.html
@@ -31,16 +31,17 @@
   <img id="mainPhoto" src="img/photos/ponchlonch.png">
 </div>
 <div class="myGallery">
-  <img class="galleryPhoto" src="https://picsum.photos/190/190?1" />
-  <img class="galleryPhoto" src="https://picsum.photos/190/190?2" />
-  <img class="galleryPhoto" src="https://picsum.photos/190/190?3" />
-  <img class="galleryPhoto" src="https://picsum.photos/190/190?4" />
-  <img class="galleryPhoto" src="https://picsum.photos/190/190?5" />
-  <img class="galleryPhoto" src="https://picsum.photos/190/190?6" />
-  <img class="galleryPhoto" src="https://picsum.photos/190/190?7" />
-  <img class="galleryPhoto" src="https://picsum.photos/190/190?8" />
-  <img class="galleryPhoto" src="https://picsum.photos/190/190?9" />
-  <img class="galleryPhoto" src="https://picsum.photos/190/190?10" />
+  <img class="galleryPhoto" src="" />
+  <img class="galleryPhoto" src="" />
+  <img class="galleryPhoto" src="" />
+  <img class="galleryPhoto" src="" />
+  <img class="galleryPhoto" src="" />
+  <img class="galleryPhoto" src="" />
+  <img class="galleryPhoto" src="" />
+  <img class="galleryPhoto" src="" />
+  <img class="galleryPhoto" src="" />
+  <img class="galleryPhoto" src="" />
+
 </div>
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
