--- a/iphone.html
+++ b/iphone.html
@@ -28,8 +28,8 @@
   <marquee><p>Punchlove</p></marquee>
   </div>
 
-  <div style="position: relative;">
-      <img src="img/iphone2.png" style="width: 100%; height: auto;">
+  <div class="iphonewrapper" style="position: relative;">
+      <img id='iphonebackground' src="img/iphone2.png">
 
       <a href="twitter.html"><div class="app" style="position: absolute; left: 57%; top: 20%; width: 10%; height: 10%;"><img src="img/icons/twit.png" width="100%"></div></a>
       <a href="https://soundcloud.com/user-209600053-646301370" target="_blank"><div class="app" style="position: absolute; left: 44.5%; top: 20%; width: 10%; height: 10%;"><img src="img/icons/soundcloud2.png" width="100%"></div></a>
