--- a/index.html
+++ b/index.html
@@ -24,17 +24,30 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <div class="title">
-  <marquee><p>Punchlove</p></marquee>
-  </div>
-
-  <div class="menu">
-    <a href="music.html">LINK TO MUSIC</a>
-    <a href="videos.html">Link To VIDEOS</a>
-    <a href="pedals.html">Link To PEDALboard</a>
-  </div>
   
-  <a class="twitter-timeline" data-height="221" data-height="250" href="https://twitter.com/punchlovemusic?ref_src=twsrc%5Etfw">Tweets by punchlovemusic</a>
+
+  <div class="iphonewrapper" style="position: relative;">
+      <img id='iphonebackground' src="img/iphone2.png">
+
+      <a href="twitter.html"><div class="app" style="position: absolute; left: 57%; top: 20%; width: 10%; height: 10%;"><img src="img/icons/twit.png" width="100%"></div></a>
+      <a href="https://soundcloud.com/user-209600053-646301370" target="_blank"><div class="app" style="position: absolute; left: 44.5%; top: 20%; width: 10%; height: 10%;"><img src="img/icons/soundcloud2.png" width="100%"></div></a>
+      <a href="https://punchlove.bandcamp.com/" target="_blank"><div class="app" style="position: absolute; left: 32%; top: 20%; width: 10%; height: 10%;"><img src="img/icons/bandcamp.png" width="100%"></div></a>
+      <a href="https://open.spotify.com/artist/5Tbdx7OG835TPTxnEgfNiW" target="_blank"><div class="app" style="position: absolute; left: 32%; top: 32.5%; width: 10%; height: 10%;"><img src="img/icons/spotify.png" width="100%"></div></a>
+      <a href="https://www.instagram.com/punchlovemusic/" target="_blank"><div class="app" style="position: absolute; left: 44.5%; top: 32.5%; width: 10%; height: 10%;"><img src="img/icons/instagram.png" width="100%"></div></a>
+      <a href="https://music.apple.com/artist/punchlove/1545713753" target="_blank"><div class="app" style="position: absolute; left: 57%; top: 32.5%; width: 10%; height: 10%;"><img src="img/icons/applemusic.png" width="100%"></div></a>
+      <a href="https://www.facebook.com/punchlovemusic/" target="_blank"><div class="app" style="position: absolute; left: 32%; top: 45%; width: 10%; height: 10%;"><img src="img/icons/facebook.png" width="100%"></div></a>
+      <a href="pedals.html"><div class="app" style="position: absolute; left: 44.5%; top: 45%; width: 10%; height: 10%;"><img src="img/icons/pedal_icon.png" width="100%"></div></a>
+      <a href="contact.html"><div class="app" style="position: absolute; left: 57%; top: 45%; width: 10%; height: 10%;"><img src="img/icons/thunderbird.png" width="100%"></div></a>
+
+      <a href="photos.html"><div class="app" style="position: absolute; left: 32%; top: 69%; width: 10%; height: 10%;"><img src="img/icons/camera.png" width="100%"></div></a>
+      <a href="photos2.html"><div class="app" style="position: absolute; left: 44.5%; top: 69%; width: 10%; height: 10%;"><img src="img/icons/camera.png" width="100%"></div></a>
+      <a href="photos_for_real.html"><div class="app" style="position: absolute; left: 57%; top: 69%; width: 10%; height: 10%;"><img src="img/icons/camera.png" width="100%"></div></a>
+
+  </div>
+  <div class="title">
+    <marquee><p>Punchlove Punchlove Punchlove Punchlove Punchlove Punchlove Punchlove Punchlove Punchlove</p></marquee>
+    </div>
+
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
     window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
