--- a/twitter.html
+++ b/twitter.html
@@ -29,26 +29,12 @@
     </div>
 
 
-    <div style="position: relative;">
+    <div class="iphonewrapper" style="position: relative;">
+        <img id='iphonebackground' src="img/iphone2.png">
+        <a href="contact.html"><div style="position: absolute; left: 30%; top: 20%; width: 10%; height: 10%;"><a class="twitter-timeline" data-width="800" data-height="800" href="https://twitter.com/punchlovemusic?ref_src=twsrc%5Etfw">Tweets by punchlovemusic</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div></a>
 
-        <a class="twitter-timeline" data-height="500" data-width="200" href="https://twitter.com/punchlovemusic?ref_src=twsrc%5Etfw"><div class="app" style="position:absolute"></div>Tweets by punchlovemusic</a>
-        <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-        <script>
-            window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-            ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-        </script>
-        <script src="https://www.google-analytics.com/analytics.js" async></script>
-        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-        <img src="img/iphone2.png" style="width: 100%; height: auto;">
     </div>
-        
-
-    <div class="iphone" onclick="window.open('apps.html', 'mywindow')">
-        <img src="img/iphone.png">
-    </div>
-
-
 </body>
 
 </html>
