--- a/pedals.html
+++ b/pedals.html
@@ -12,9 +12,6 @@
   <meta property="og:url" content="">
   <meta property="og:image" content="">
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="styles/main.css">
 
@@ -30,11 +27,11 @@
 
   <div style="position: relative;">
     <img src="img/pedalboard.png" style="width: 100%; height: auto;">
-    <div class="app" style="position: absolute; left: 10%; top: 20%; width: 10%; height: 10%;"><div id="slot1" class="slot empty"></div></div>
-    <div class="app" style="position: absolute; left: 25%; top: 20%; width: 10%; height: 10%;"><div id="slot1" class="slot empty"></div></div>
-    <div class="app" style="position: absolute; left: 40%; top: 20%; width: 10%; height: 10%;"><div id="slot1" class="slot empty"></div></div>
-    <div class="app" style="position: absolute; left: 55%; top: 20%; width: 10%; height: 10%;"><div id="slot1" class="slot empty"></div></div>
-    <div class="app" style="position: absolute; left: 70%; top: 20%; width: 10%; height: 10%;"><div id="slot1" class="slot empty"></div></div>
+    <div class="app" style="position: absolute; left: 10%; top: 10%; width: 10%; height: 10%;"><div id="slot1" class="slot empty"><img src="./img/velcro.png"></div></div>
+    <div class="app" style="position: absolute; left: 25%; top: 10%; width: 10%; height: 10%;"><div id="slot2" class="slot empty"><img src="./img/velcro.png"></div></div>
+    <div class="app" style="position: absolute; left: 40%; top: 10%; width: 10%; height: 10%;"><div id="slot3" class="slot empty"><img src="./img/velcro.png"></div></div>
+    <div class="app" style="position: absolute; left: 55%; top: 10%; width: 10%; height: 10%;"><div id="slot4" class="slot empty"><img src="./img/velcro.png"></div></div>
+    <div class="app" style="position: absolute; left: 70%; top: 10%; width: 10%; height: 10%;"><div id="slot5" class="slot empty"><img src="./img/velcro.png"></div></div>
 
   </div>
   
