--- a/twitter.html
+++ b/twitter.html
@@ -24,17 +24,24 @@
 <body>
 
     <!-- Add your site or application content here -->
-    <div class="title">
-        <marquee><p>Punchlove</p></marquee>
-    </div>
-
+    <!-- can't quite figure out how to have the twitter embed adjust with the size of the screen.
+        according to this link (https://developer.twitter.com/en/docs/twitter-for-websites/timelines/overview)
+        the data-width and -height should set the maximum width and height, then inherit other settings from
+        its parent, but i think since the parent style is position: absolute it's not actually resizing.
+        could be helpful too: https://stackoverflow.com/questions/50535103/twitter-embed-how-to-override-css-->
 
     <div class="iphonewrapper" style="position: relative;">
         <img id='iphonebackground' src="img/iphone2.png">
-        <a href="contact.html"><div style="position: absolute; left: 30%; top: 20%; width: 10%; height: 10%;"><a class="twitter-timeline" data-width="800" data-height="800" href="https://twitter.com/punchlovemusic?ref_src=twsrc%5Etfw">Tweets by punchlovemusic</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div></a>
-
+        <div style="position: absolute; left: 28%; top: 12%; width: auto; height: auto;">
+            <a class="twitter-timeline" data-height="445" data-width="300" data-theme="dark" href="https://twitter.com/punchlovemusic?ref_src=twsrc%5Etfw">Tweets by punchlovemusic</a>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
     </div>
+
+    <div class="sidetext" style="position: fixed; top: 0; left: 0;">
+        <marquee direction="down" style="height:1000px"><p>twitter dot com</p><p>twitter dot com</p><p>twitter dot com</p></marquee>
+    </div>
+
 </body>
 
 </html>
