--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,28 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <meta property="og:title" content="" />
+    <meta property="og:type" content="" />
+    <meta property="og:url" content="" />
+    <meta property="og:image" content="" />
+
+    <link rel="stylesheet" href="styles/main.css" />
+
+    <meta name="theme-color" content="#fafafa" />
+
 </head>
 <body>
 
+    <div class="title">
+        <marquee><p>CONTACT US!</p></marquee>
+    </div>
+
+    <div class="button">
+        <button type="button" onclick="window.location.href='mailto: punchlovesound@gmail.com'"><p>email us at<br />punchlovesound@gmail.com !!!</p></button>
+    </div>
+    
 </body>
 </html>
