--- a/videos.html
+++ b/videos.html
@@ -23,21 +23,25 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <div class="title">
-  <marquee><p>BEAUTIFUL VIDEOS</p></marquee>
-  </div>
+    <!-- Add your site or application content here -->    
+    <iframe width="25%" height="25%" src="https://www.youtube.com/embed/CDaL4_rhaok"
+            title="fistf**k live from seCret loCation 02-25-2023" frameborder="1"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+    </iframe>
 
-  <iframe src="https://drive.google.com/file/d/1z_cTVarwg-upF2P_ipLFk8myaSumVsN1/preview" width="640" height="480" allow="autoplay"></iframe>
+    <iframe width="25%" height="25%" src="https://www.youtube.com/embed/DAT5R0Z48fA" 
+            title="[shoegaze] punchlove - wnyu &quot;alive in the basement&quot; 03.28.2022" frameborder="1" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>        
+    </iframe>
 
-  
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+
+    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+    <script>
+        window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+        ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
 
 </html>
