--- a/yoda.html
+++ b/yoda.html
@@ -23,9 +23,9 @@
 <body>
     <div class="title"><marquee><p>See You Tomorrow!</p></marquee></div>
 
-    <div style="position: relative;">
+    <div class="iphonewrapper" style="position: relative;">
         <img src="img/iphone2.png" style="width: 100%; height: auto;">
-        <img src="img/gif/yoda.gif" style="position:absolute; left: 30%; top: 10%;">
+        <img src="img/gif/yoda.gif" style="position:absolute; left: 29%; top: 10%; width: 41%; height: auto">
     </div>
 </body>
 </html>
