--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Punchlove.net</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -14,6 +14,7 @@
 
 
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
 
     <meta name="theme-color" content="#fafafa">
 </head>
@@ -45,7 +46,7 @@
     </div>
     <div class="title">
         <marquee>
-            <p>Punchlove Punchlove Punchlove Punchlove Punchlove Punchlove Punchlove Punchlove Punchlove</p>
+            <p>Punchlove Punchlove Punchlove Punchlove Punchlove Punchlove Punchlove Punchlove</p>
         </marquee>
     </div>
 
