--- a/public/photos.html
+++ b/public/photos.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Photos</title>
+  <title>Punchlove.net</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -16,6 +16,7 @@
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="styles/main.css">
+  <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
 
   <meta name="theme-color" content="#fafafa">
 </head>
