--- a/public/webcam.html
+++ b/public/webcam.html
@@ -5,21 +5,26 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hey, You!</title>
+    <title>mirror mirror</title>
+
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
 
     <style>
         h1 {
             font-family: sans-serif;
             color: darkgreen;
         }
+
         body {
             margin: 50px;
         }
+
         #container {
             width: 500px;
             height: 375px;
             border: 10px #ff0000 solid;
         }
+
         #videoElement {
             width: 500px;
             height: 375px;
@@ -28,7 +33,6 @@
             filter: invert(0);
             filter: grayscale(0);
         }
-        
     </style>
 
 </head>
