--- a/public/yoda.html
+++ b/public/yoda.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>you lose.</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -17,6 +17,7 @@
     <!-- Place favicon.ico in the root directory -->
 
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
 
     <meta name="theme-color" content="#fafafa">
 </head>
