--- a/public/contact.html
+++ b/public/contact.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>contact us!</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -13,6 +13,7 @@
     <meta property="og:image" content="" />
 
     <link rel="stylesheet" href="styles/main.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
 
     <meta name="theme-color" content="#fafafa" />
 
