--- a/public/pedals.html
+++ b/public/pedals.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>make some music.</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -14,6 +14,7 @@
 
 
   <link rel="stylesheet" href="styles/main.css">
+  <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
 
   <meta name="theme-color" content="#fafafa">
 </head>
