--- a/public/twitter.html
+++ b/public/twitter.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>TL</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -17,6 +17,7 @@
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="styles/main.css">
+  <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -37,6 +38,8 @@
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
     </div>
+
+    <a href="index.html"><div class="app" style="position: absolute; left: 50%; top: 70%;"><img src="img/homebutton.png" width="100%" /></div></a>
 
     <div class="sidetext" style="position: fixed; top: 0; left: 0;">
         <marquee direction="down" style="height:1000px"><p>twitter dot com</p><p>twitter dot com</p><p>twitter dot com</p></marquee>
