--- a/public/twitter.html
+++ b/public/twitter.html
@@ -30,16 +30,20 @@
         the data-width and -height should set the maximum width and height, then inherit other settings from
         its parent, but i think since the parent style is position: absolute it's not actually resizing.
         could be helpful too: https://stackoverflow.com/questions/50535103/twitter-embed-how-to-override-css-->
+    
 
-    <div class="iphonewrappertwit" style="position: fixed; left: 25%">
-        <img id='iphonebackgroundtwit' src="img/iphone2.png">
-        <div style="position: absolute; left: 28%; top: 12%; width: auto; height: auto;">
-            <a id="twitter" class="twitter-timeline" data-height="445" data-width="300" data-theme="dark" href="https://twitter.com/punchlovemusic?ref_src=twsrc%5Etfw">Tweets by punchlovemusic</a>
-            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div>
-    </div>
-
-    <a href="index.html"><div class="app" style="position: absolute; left: 50%; top: 70%;"><img src="img/homebutton.png" width="100%" /></div></a>
+    <!-- <div class="iphonewrapper" style="position: relative;">
+        <img id='iphonebackground' src="img/iphone2.png"> -->
+        <div class="iphone-container">
+            <div class="iphone-frame">
+              <div class="twitter-container">
+                <a id="twitter" class="twitter-timeline" data-theme="dark" href="https://twitter.com/punchlovemusic?ref_src=twsrc%5Etfw">Tweets by punchlovemusic</a>
+                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                </div>
+              </div>
+            </div>
+    
+    <!-- </div> -->
 
     <div class="sidetext" style="position: fixed; top: 0; left: 0;">
         <marquee direction="down" style="height:1000px"><p>twitter dot com</p><p>twitter dot com</p><p>twitter dot com</p></marquee>
@@ -50,7 +54,7 @@
     </div>
 
     <script defer src="./scripts/twitter.js"></script>
-
+   
 </body>
 
 </html>
