added site manifest

--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,16 @@
+<!--
+________  ___  ___  ________   ________  ___  ___  ___       ________  ___      ___ _______      
+|\   __  \|\  \|\  \|\   ___  \|\   ____\|\  \|\  \|\  \     |\   __  \|\  \    /  /|\  ___ \     
+\ \  \|\  \ \  \\\  \ \  \\ \  \ \  \___|\ \  \\\  \ \  \    \ \  \|\  \ \  \  /  / | \   __/|    
+ \ \   ____\ \  \\\  \ \  \\ \  \ \  \    \ \   __  \ \  \    \ \  \\\  \ \  \/  / / \ \  \_|/__  
+  \ \  \___|\ \  \\\  \ \  \\ \  \ \  \____\ \  \ \  \ \  \____\ \  \\\  \ \    / /   \ \  \_|\ \ 
+   \ \__\    \ \_______\ \__\\ \__\ \_______\ \__\ \__\ \_______\ \_______\ \__/ /     \ \_______\
+    \|__|     \|_______|\|__| \|__|\|_______|\|__|\|__|\|_______|\|_______|\|__|/       \|_______|
+                                                                                                  
+Webpage built and maintained by Harry Minsky and Joey Kinnan (c) 2023
+                                                                                                  
+-->
+
 <!doctype html>
 <html class="no-js" lang="">
 
