--- a/public/contact.html
+++ b/public/contact.html
@@ -20,13 +20,17 @@
 </head>
 <body>
 
-    <div class="title">
-        <marquee><p>CONTACT US!</p></marquee>
-    </div>
+
 
     <div class="button">
-        <button type="button" onclick="window.location.href='mailto: punchlovesound@gmail.com'"><p>email us at<br />punchlovesound@gmail.com !!!</p></button>
+        <button type="button" onclick="window.location.href='mailto: punchlovesound@gmail.com'" value="first"></button>
     </div>
-    
+
+    <!--<p>email us at<br />punchlovesound@gmail.com !!!</p>
+        <img src="img/gif/email_us.gif" width="100%" />
+        <div class="title">
+        <marquee><p>CONTACT US!</p></marquee>
+    </div>-->
+
 </body>
 </html>
