--- a/public/index.html
+++ b/public/index.html
@@ -44,12 +44,11 @@
         <a href="webcam.html"><div class="app" style="position: absolute; left: 57%; top: 69%; width: 10%; height: 10%;"><img src="img/icons/camera.png" width="100%"></div></a>
 
     </div>
-    <div class="title">
+    <!--<div class="title">
         <marquee>
             <p>Punchlove Punchlove Punchlove Punchlove Punchlove Punchlove Punchlove Punchlove</p>
         </marquee>
-    </div>
-
+    </div>-->
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
     <script>
         window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
