--- a/public/videos.html
+++ b/public/videos.html
@@ -20,22 +20,54 @@
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
 
   <meta name="theme-color" content="#fafafa">
+
+  <style>
+      .parent {
+          margin: 1rem;
+          text-align: center;
+      }
+      .child {
+          display: inline-block;
+          padding: 1rem 1rem;
+          vertical-align: middle;
+      }
+  </style>
+
 </head>
 
 <body>
 
-    <!-- Add your site or application content here -->    
-    <iframe width="25%" height="25%" src="https://www.youtube.com/embed/CDaL4_rhaok"
-            title="fistf**k live from seCret loCation 02-25-2023" frameborder="1"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-    </iframe>
+    <div class="parent">
+        <div class="child">
+            <iframe width="650" height="400" src="https://www.youtube.com/embed/MR0qBlJnrT0"
+                    title="Punchlove - &quot;Guilt&quot; Live at the Mercury Lounge in NYC 3/8/23" frameborder="1"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+            </iframe>
+        </div>
 
-    <iframe width="25%" height="25%" src="https://www.youtube.com/embed/DAT5R0Z48fA" 
-            title="[shoegaze] punchlove - wnyu &quot;alive in the basement&quot; 03.28.2022" frameborder="1" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>        
-    </iframe>
+        <div class="child">
+            <iframe width="650" height="400" src="https://www.youtube.com/embed/UPZpV2SfDHM"
+                    title="Punchlove - “i” &amp; “* Screwdriver” (LIVE @ Mercury Lounge New York NYC USA 8 March 2023)" frameborder="1"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+            </iframe>
+        </div>
+    </div>
 
+    <div class="parent">
+        <div class="child">
+            <iframe width="650" height="400" src="https://www.youtube.com/embed/CDaL4_rhaok"
+                    title="fistf**k live from seCret loCation 02-25-2023" frameborder="1"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+            </iframe>
+        </div>
 
+        <div class="child">
+            <iframe width="650" height="400" src="https://www.youtube.com/embed/DAT5R0Z48fA"
+                    title="[shoegaze] punchlove - wnyu &quot;alive in the basement&quot; 03.28.2022" frameborder="1"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+            </iframe>
+        </div>
+    </div>
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
     <script>
