--- a/public/channels.html
+++ b/public/channels.html
@@ -9,7 +9,7 @@
 <body>
     <section class="channels">
         <div class="phoneLink">
-            <a href="index.html">
+            <a href="iphone.html">
                 <img src="img/iphone2.png" width="100%" />
             </a>
         </div>
