--- a/public/webcam.html
+++ b/public/webcam.html
@@ -54,7 +54,7 @@
         <img src="img/gif/yoda.gif" width="10%" height="10%">
     </a>
 
-    <a href="index.html" style="position: absolute; left:60%; top:40%">
+    <a href="iphone.html" style="position: absolute; left:60%; top:40%">
         <img src="img/gif/spaceships.gif" width="15%" height="15%">
     </a>
 
