--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@ Webpage built and maintained by Harry Minsky and Joey Kinnan (c) 2023
 
 <head>
     <meta charset="utf-8">
-    <title>Punchlove.net</title>
+    <title>░▒ Punchlove.net ▒░</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta property="og:title" content="">
@@ -27,42 +27,61 @@ Webpage built and maintained by Harry Minsky and Joey Kinnan (c) 2023
     <meta name="keywords" content="Music, Shoegaze, New York, Punchlove, Band, Indepedent">
     <meta name="author" content="Punchlove">
 
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/title.css">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
 
     <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
+    <section class="showcase">
 
-    <!-- Add your site or application content here -->
+        <div class="text">
+            <marquee behavior="scroll" direction="down">
+                <img src="img/punchlove_logo_victoriawinter_top.png" width="100%" height="100%" />
+            </marquee>
+
+        </div>
+
+        <div class="text">
+            <a href="redirect.html"><img src="img/gif/enter.gif" width="100%" height="500vh" /></a>
+
+        </div>
+
+        <div class="text">
+            <marquee behavior="scroll" direction="up">
+                <img src="img/punchlove_logo_victoriawinter_bot.png" width="100%" height="100%" />
+            </marquee>
+        </div>
+
+        <!--<header>
+            <div class="toggle"></div>
+
+        </header>-->
+        <!--<video autoplay muted loop controls>
+            <source src="img/videos/birdsong-viz-plume-bfg.mp4" type="video/mp4" />
+        </video>-->
+        <!--<div class="gif">
+            <img src="img/gif/birdsong-gif-crop.gif" />
+        </div>-->
+
+        <div class="overlay"></div>
 
 
-    <div class="iphonewrapper" style="position: relative;">
-        <img id='iphonebackground' src="img/iphone2.png">
 
-        <a href="twitter.html"><div class="app" style="position: absolute; left: 57%; top: 20%; width: 10%; height: 10%;"><img src="img/icons/twit.png" width="100%"></div></a>
-        <a href="https://soundcloud.com/user-209600053-646301370" target="_blank"><div class="app" style="position: absolute; left: 57%; top: 32.5%; width: 10%; height: 10%; "><img src="img/icons/soundcloud2.png" width="100%"></div></a>
-        <a href="https://punchlove.bandcamp.com/" target="_blank"><div class="app" style="position: absolute; left: 32%; top: 20%; width: 10%; height: 10%;"><img src="img/icons/bandcamp.png" width="100%"></div></a>
-        <a href="https://open.spotify.com/artist/5Tbdx7OG835TPTxnEgfNiW" target="_blank"><div class="app" style="position: absolute; left: 44.5%; top: 20%; width: 10%; height: 10%;"><img src="img/icons/spotify.png" width="100%"></div></a>
-        <a href="https://www.instagram.com/punchlovemusic/" target="_blank"><div class="app" style="position: absolute; left: 44.5%; top: 32.5%; width: 10%; height: 10%;"><img src="img/icons/instagram.png" width="100%"></div></a>
-        <a href="https://music.apple.com/artist/punchlove/1545713753" target="_blank"><div class="app" style="position: absolute; left: 32%; top: 32.5%; width: 10%; height: 10%;"><img src="img/icons/applemusic.png" width="100%"></div></a>
-        <a href="videos.html"><div class="app" style="position: absolute; left: 32%; top: 45%; width: 10%; height: 10%;"><img src="img/icons/videos.png" width="100%"></div></a>
-        <a href="pedals.html"><div class="app" style="position: absolute; left: 44.5%; top: 45%; width: 10%; height: 10%;"><img src="img/icons/pedal_icon.png" width="100%"></div></a>
-        <a href="contact.html"><div class="app" style="position: absolute; left: 57%; top: 45%; width: 10%; height: 10%;"><img src="img/icons/thunderbird.png" width="100%"></div></a>
+        <ul class="social">
+        </ul>
 
-        <a href="https://linktr.ee/punchlovemusic" target="_blank"><div class="app" style="position: absolute; left: 29.5%; top: 55%; width: 40%; height: 10%;"><img src="img/icons/SHOWS.png" width="100%" /></div></a>
+    </section>
 
-        <a href="photos_for_real.html"><div class="app" style="position: absolute; left: 32%; top: 69%; width: 10%; height: 10%;"><img src="img/icons/camera.png" width="100%"></div></a>
-        <a href="photos2.html"><div class="app" style="position: absolute; left: 44.5%; top: 69%; width: 10%; height: 10%;"><img src="img/icons/camera.png" width="100%"></div></a>
-        <a href="webcam.html"><div class="app" style="position: absolute; left: 57%; top: 69%; width: 10%; height: 10%;"><img src="img/icons/camera.png" width="100%"></div></a>
-
+    <div class="menu">
+        <ul>
+            <li><img src="img/icons/bandcamp.png" width="10%" height="10%" /></li>
+            <li><img src="img/icons/instagram.png" width="10%" height="10%" /></li>
+            <li><img src="img/icons/spotify.png" width="10%" height="10%" /></li>
+        </ul>
     </div>
-    <!--<div class="title">
-        <marquee>
-            <p>Punchlove Punchlove Punchlove Punchlove Punchlove Punchlove Punchlove Punchlove</p>
-        </marquee>
-    </div>-->
+
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
     <script>
         window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
