--- a/public/contact.html
+++ b/public/contact.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="" />
     <meta property="og:image" content="" />
 
-    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="styles/title.css" />
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
 
     <meta name="theme-color" content="#fafafa" />
@@ -20,17 +20,15 @@
 </head>
 <body>
 
-
-
     <div class="button">
+        <marquee behavior="scroll" direction="right">
+            <img src="img/gif/emailspin.gif" width="10%" height="20%" />
+        </marquee>        
         <button type="button" onclick="window.location.href='mailto: punchlovesound@gmail.com'" value="first"></button>
+        <marquee behavior="scroll" direction="left">
+            <img src="img/gif/mailboxdevil.gif" width="10%" height="20%" />
+        </marquee>        
     </div>
-
-    <!--<p>email us at<br />punchlovesound@gmail.com !!!</p>
-        <img src="img/gif/email_us.gif" width="100%" />
-        <div class="title">
-        <marquee><p>CONTACT US!</p></marquee>
-    </div>-->
 
 </body>
 </html>
