--- a/public/index.html
+++ b/public/index.html
@@ -34,36 +34,36 @@ Webpage built and maintained by Harry Minsky and Joey Kinnan (c) 2023
 </head>
 
 <body>
+
     <section class="showcase">
 
         <div class="text">
-            <marquee behavior="scroll" direction="down">
-                <img src="img/punchlove_logo_victoriawinter_top.png" width="100%" height="100%" />
-            </marquee>
-
+            <a href="https://linktr.ee/punchlovemusic"><img src="img/gif/linktree.gif" /></a>
         </div>
 
-        <div class="text">
-            <a href="redirect.html"><img src="img/gif/enter.gif" width="100%" height="500vh" /></a>
+        <section class="textBox">
+            <div class="text">
+                <a href="redirect.html">
+                    <marquee behavior="scroll" direction="down">
+                        <img src="img/punchlove_logo_victoriawinter_top.png" width="100%" height="100%" />
+                    </marquee>
+                </a>                
+            </div>
 
-        </div>
+            <div class="text">
+                <a href="redirect.html"><img src="img/gif/enter.gif" width="100%" height="500vh" /></a>
 
-        <div class="text">
-            <marquee behavior="scroll" direction="up">
-                <img src="img/punchlove_logo_victoriawinter_bot.png" width="100%" height="100%" />
-            </marquee>
-        </div>
+            </div>
 
-        <!--<header>
-            <div class="toggle"></div>
-
-        </header>-->
-        <!--<video autoplay muted loop controls>
-            <source src="img/videos/birdsong-viz-plume-bfg.mp4" type="video/mp4" />
-        </video>-->
-        <!--<div class="gif">
-            <img src="img/gif/birdsong-gif-crop.gif" />
-        </div>-->
+            <div class="text">
+                <a href="redirect.html">
+                    <marquee behavior="scroll" direction="up">
+                        <img src="img/punchlove_logo_victoriawinter_bot.png" width="100%" height="100%" />
+                    </marquee>
+                </a>
+                
+            </div>
+        </section>
 
         <div class="overlay"></div>
 
@@ -81,6 +81,8 @@ Webpage built and maintained by Harry Minsky and Joey Kinnan (c) 2023
             <li><img src="img/icons/spotify.png" width="10%" height="10%" /></li>
         </ul>
     </div>
+
+
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
     <script>
