--- a/public/iphone.html
+++ b/public/iphone.html
@@ -12,7 +12,17 @@
 
 
     <div class="iphonewrapper" style="position: relative;">
+        <!--<a href="https://linktr.ee/punchlovemusic" target="_blank">
+        <img src="img/gif/upcoming-shows.gif" />
+    </a>-->
+
+
         <img id='iphonebackground' src="img/iphone2.png">
+
+        <!--<a href="https://linktr.ee/punchlovemusic" target="_blank">
+        <img src="img/gif/stream-links.gif" />
+    </a>-->
+
 
         <a href="twitter.html"><div class="app" style="position: absolute; left: 57%; top: 20%; width: 10%; height: 10%;"><img src="img/icons/twit.png" width="100%"></div></a>
         <a href="https://soundcloud.com/user-209600053-646301370" target="_blank"><div class="app" style="position: absolute; left: 57%; top: 32.5%; width: 10%; height: 10%; "><img src="img/icons/soundcloud2.png" width="100%"></div></a>
@@ -24,7 +34,7 @@
         <a href="pedals.html"><div class="app" style="position: absolute; left: 44.5%; top: 45%; width: 10%; height: 10%;"><img src="img/icons/pedal_icon.png" width="100%"></div></a>
         <a href="contact.html"><div class="app" style="position: absolute; left: 57%; top: 45%; width: 10%; height: 10%;"><img src="img/icons/thunderbird.png" width="100%"></div></a>
 
-        <a href="https://linktr.ee/punchlovemusic" target="_blank"><div class="app" style="position: absolute; left: 29.5%; top: 55%; width: 40%; height: 10%;"><img src="img/icons/SHOWS.png" width="100%" /></div></a>
+        <a href="https://linktr.ee/punchlovemusic" target="_blank"><div class="app" style="position: absolute; left: 32%; top: 55.5%; width: 35%; height: 10%;"><img src="img/gif/upcoming-shows2.gif" width="100%" /></div></a>
 
         <a href="photos_for_real.html"><div class="app" style="position: absolute; left: 32%; top: 69%; width: 10%; height: 10%;"><img src="img/icons/camera.png" width="100%"></div></a>
         <a href="photos2.html"><div class="app" style="position: absolute; left: 44.5%; top: 69%; width: 10%; height: 10%;"><img src="img/icons/camera.png" width="100%"></div></a>
