--- a/public/redirect.html
+++ b/public/redirect.html
@@ -6,6 +6,7 @@
     <meta http-equiv="refresh" content="4; URL=channels.html" />
     <link rel="stylesheet" href="styles/title.css">
     <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <section class="redirect">
