--- a/public/index - Copy.html
+++ b/public/index - Copy.html
@@ -16,7 +16,7 @@ Webpage built and maintained by Harry Minsky and Joey Kinnan (c) 2023
 
 <head>
     <meta charset="utf-8">
-    <title>Punchlove.net</title>
+    <title>░▒ Punchlove.net ▒░</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta property="og:title" content="">
