--- a/public/about.html
+++ b/public/about.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Punchlove.net</title>
+  <title>░▒ Punchlove.net ▒░</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
