--- a/public/channels.html
+++ b/public/channels.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="styles/title.css">
-    <title></title>
+    <title>░▒ Punchlove.net ▒░</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
