--- a/public/redirect.html
+++ b/public/redirect.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="refresh" content="4; URL=channels.html" />
     <link rel="stylesheet" href="styles/title.css">
-    <title></title>
+    <title>Redirecting...</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
