--- a/public/iphone.html
+++ b/public/iphone.html
@@ -35,7 +35,7 @@
         <a href="pedals.html"><div class="app" style="position: absolute; left: 44.5%; top: 45%; width: 10%; height: 10%;"><img src="img/icons/pedal_icon.png" width="100%"></div></a>
         <a href="contact.html"><div class="app" style="position: absolute; left: 57%; top: 45%; width: 10%; height: 10%;"><img src="img/icons/thunderbird.png" width="100%"></div></a>
 
-        <a href="https://linktr.ee/punchlovemusic" target="_blank"><div class="app" style="position: absolute; left: 32%; top: 55.5%; width: 35%; height: 10%;"><img src="img/gif/upcoming-shows2.gif" width="100%" /></div></a>
+        <a href="https://linktr.ee/punchlovemusic" target="_blank"><div class="app" style="position: absolute; left: 32%; top: 55.5%; width: 35%; height: 10%;"><img src="img/gif/links.gif" width="100%" /></div></a>
 
         <a href="photos_for_real.html"><div class="app" style="position: absolute; left: 32%; top: 69%; width: 10%; height: 10%;"><img src="img/icons/camera.png" width="100%"></div></a>
         <a href="photos2.html"><div class="app" style="position: absolute; left: 44.5%; top: 69%; width: 10%; height: 10%;"><img src="img/icons/camera.png" width="100%"></div></a>
