--- a/public/redirect.html
+++ b/public/redirect.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="4; URL=channels.html" />
+    <meta http-equiv="refresh" content="2; URL=iphone.html" />
     <link rel="stylesheet" href="styles/title.css">
     <title>Redirecting...</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
