--- a/public/contact.html
+++ b/public/contact.html
@@ -22,11 +22,11 @@
 
     <div class="button">
         <marquee behavior="scroll" direction="right">
-            <img src="img/gif/emailspin.gif" width="10%" height="20%" />
+            <img src="img/gif/emailspin.gif" width="130vh" height="100vh" />
         </marquee>        
         <button type="button" onclick="window.location.href='mailto: punchlovesound@gmail.com'" value="first"></button>
         <marquee behavior="scroll" direction="left">
-            <img src="img/gif/mailboxdevil.gif" width="10%" height="20%" />
+            <img src="img/gif/mailboxdevil.gif" width="120vh" height="120vh" />
         </marquee>        
     </div>
 
