--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@ Webpage built and maintained by Harry Minsky and Joey Kinnan (c) 2023
     <section class="showcase">
 
         <div class="text">
-            <a href="https://linktr.ee/punchlovemusic"><img src="img/gif/linktree.gif" /></a>
+            <a href="https://linktr.ee/punchlovemusic" target="_blank"><img src="img/gif/linktree.gif" /></a>
         </div>
 
         <section class="textBox">
@@ -73,7 +73,7 @@ Webpage built and maintained by Harry Minsky and Joey Kinnan (c) 2023
         </ul>
 
     </section>
-
+    <!--
     <div class="menu">
         <ul>
             <li><img src="img/icons/bandcamp.png" width="10%" height="10%" /></li>
@@ -82,7 +82,7 @@ Webpage built and maintained by Harry Minsky and Joey Kinnan (c) 2023
         </ul>
     </div>
 
-
+    -->
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
     <script>
