--- a/public/twitter.html
+++ b/public/twitter.html
@@ -36,10 +36,13 @@
         <img id='iphonebackground' src="img/iphone2.png"> -->
         <div class="iphone-container">
             <div class="iphone-frame">
+                <img src="img/broken.png" width="375px" height="667px" />
+              <!--
               <div class="twitter-container">
                 <a id="twitter" class="twitter-timeline" data-theme="dark" href="https://twitter.com/punchlovemusic?ref_src=twsrc%5Etfw">Tweets by punchlovemusic</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
+              -->
               </div>
             </div>
     
