--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@ Webpage built and maintained by Harry Minsky and Joey Kinnan (c) 2023
     <section class="showcase">
 
         <div class="text">
-            <a href="https://linktr.ee/punchlovemusic" target="_blank"><img src="img/gif/linktree.gif" /></a>
+            <a href="https://linktr.ee/punchlovemusic" target="_blank"><img src="img/gif/linktree.gif" width="100%" height="auto" /></a>
         </div>
 
         <section class="textBox">
