--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     </div>
 
     <div class="linkWrapper" style="position: relative;">
-        <button onclick="window.open('https://open.spotify.com/artist/5Tbdx7OG835TPTxnEgfNiW');"
+        <button onclick="window.open('https://open.spotify.com/track/4bFyukeX4nCR9BEY1iuhps?si=926fc86f64ce419c');"
                 id="musicButton" style="background-color: black; color: green;">
             SPOTIFY
         </button>
@@ -38,7 +38,7 @@
                 style="justify-content: center;">
             V I S U A L I Z E R
         </button>
-        <button onclick="window.open('https://music.apple.com/artist/punchlove/1545713753');"
+        <button onclick="window.open('https://music.apple.com/us/album/dead-lands-single/1708089577');"
                 id="musicButton" style="color: red;">
             APPLE MUSIC
         </button>
