--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,11 @@
 </head>
 
 <body>
+    <div class="continue" style="position: relative;">
+        <a href="https://linktr.ee/punchlovemusic" target="_blank">
+            <img src="img/gif/linktree.gif" />
+        </a>
+    </div>
 
     <div class="cover" style="position: relative;">
         <img id="albumArt" src="img/DeadLands_Single_Digital.png" />
@@ -51,9 +56,11 @@
     </div>
 
 
+
+
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
     <script>
-    location
+        location
         window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
         ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
     </script>
