--- a/public/index.html
+++ b/public/index.html
@@ -22,16 +22,31 @@
 
 <body>
     <div class="continue" style="position: relative;">
+        <img src="img/punchlove_logo_victoriawinter.png" style="height:50px; margin-right:5vh;" />
         <a href="https://linktr.ee/punchlovemusic" target="_blank">
             <img src="img/gif/linktree.gif" />
         </a>
+        <img src="img/punchlove_logo_victoriawinter.png" style="height:50px; margin-left:5vh;" />
+    </div>
+
+    <div class="cover" style="position: relative;">
+        <img id="albumArt" src="img/Screwdriver_Single_Digital.png" />
+
+        <!--<p><i>Screwdriver</i></p>-->
+        <p>New Single Out January 16, 2024</p>        
+    </div>
+
+    <div class="linkWrapper" style="position: relative;">
+        <button onclick="window.open('https://lnk.to/screwdriver');"
+                id="vizButton">
+            PRE-SAVE
+        </button>
     </div>
 
     <div class="cover" style="position: relative;">
         <img id="albumArt" src="img/DeadLands_Single_Digital.png" />
 
-        <p><i>Dead Lands</i></p>
-        <p>New Single Out Now</p>
+        <p><i>Dead Lands --- Out Now!</i></p>
     </div>
 
     <div class="linkWrapper" style="position: relative;">
