--- a/public/index.html
+++ b/public/index.html
@@ -29,40 +29,74 @@
         <img src="img/punchlove_logo_victoriawinter.png" style="height:50px; margin-left:5vh;" />
     </div>
 
-    <div class="cover" style="position: relative;">
-        <img id="albumArt" src="img/Screwdriver_Single_Digital.png" />
+    <div class="fill">
+        <div class="cover2" style="position: relative;">
+            <img id="albumArt" src="img/Screwdriver_Single_Digital.png" />
 
-        <!--<p><i>Screwdriver</i></p>-->
-        <p>New Single Out January 16, 2024</p>        
+            <p>Screwdriver -- New Single Out Now!</p>
+
+
+        </div>
+
+        <div class="linkWrapper" style="position: relative;">
+            <button onclick="window.open('https://open.spotify.com/track/7DlxlzEqL01TZlQkZaeyyY?si=f1873624e8ff4fd5');"
+                    id="musicButton" style="background-color: black; color: green;">
+                SPOTIFY
+            </button>
+            <button onclick="window.open('https://youtu.be/t0xupGC7MbM');"
+                    id="vizButton">
+                MUSIC VIDEO
+            </button>
+            <button onclick="window.open('');"
+                    id="musicButton" style="color: red;">
+                APPLE MUSIC
+            </button>
+        </div>
     </div>
 
-    <div class="linkWrapper" style="position: relative;">
-        <button onclick="window.open('https://lnk.to/screwdriver');"
-                id="vizButton">
-            PRE-SAVE
-        </button>
+    <div class="wrapperWrapper" style="position: relative;">
+
+        <div class="fill">
+            <div class="cover" style="position: relative;">
+                <img id="albumArt" src="img/Channels_AlbumCover.png" />
+
+                <!--<p><i>Screwdriver</i></p>-->
+                <div class="linkWrapper" style="position: relative;">
+                    <button onclick="window.open('https://punchlove.bandcamp.com/album/channels');"
+                            id="vizButton">
+                        Pre-Order <i>Channels</i> Here
+                    </button>
+                </div>
+            </div>            
+        </div>
+
+        <div class="fill">
+            <div class="cover" style="position: relative;">
+                <img id="albumArt" src="img/DeadLands_Single_Digital.png" />
+
+                <p>Dead Lands --- Out Now!</p>
+            </div>
+
+            <div class="linkWrapper" style="position: relative;">
+                <button onclick="window.open('https://open.spotify.com/track/4bFyukeX4nCR9BEY1iuhps?si=926fc86f64ce419c');"
+                        id="musicButton" style="background-color: black; color: green;">
+                    SPOTIFY
+                </button>
+                <button id="vizButton" onclick="window.open('https://youtu.be/zpGjIeDqL4w');"
+                        style="justify-content: center;">
+                    VISUALIZER
+                </button>
+                <button onclick="window.open('https://music.apple.com/us/album/dead-lands-single/1708089577');"
+                        id="musicButton" style="color: red;">
+                    APPLE MUSIC
+                </button>
+            </div>
+        </div>
+
+                
     </div>
 
-    <div class="cover" style="position: relative;">
-        <img id="albumArt" src="img/DeadLands_Single_Digital.png" />
 
-        <p><i>Dead Lands --- Out Now!</i></p>
-    </div>
-
-    <div class="linkWrapper" style="position: relative;">
-        <button onclick="window.open('https://open.spotify.com/track/4bFyukeX4nCR9BEY1iuhps?si=926fc86f64ce419c');"
-                id="musicButton" style="background-color: black; color: green;">
-            SPOTIFY
-        </button>
-        <button id="vizButton" onclick="window.open('https://youtu.be/zpGjIeDqL4w');"
-                style="justify-content: center;">
-            V I S U A L I Z E R
-        </button>
-        <button onclick="window.open('https://music.apple.com/us/album/dead-lands-single/1708089577');"
-                id="musicButton" style="color: red;">
-            APPLE MUSIC
-        </button>
-    </div>
 
     <div class="continue" style="position: relative;">
         <a href="frontPage.html">
