--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
                     id="vizButton">
                 MUSIC VIDEO
             </button>
-            <button onclick="window.open('');"
+            <button onclick="window.open('https://music.apple.com/us/album/screwdriver/1713374727?i=1713374734');"
                     id="musicButton" style="color: red;">
                 APPLE MUSIC
             </button>
@@ -62,9 +62,9 @@
 
                 <!--<p><i>Screwdriver</i></p>-->
                 <div class="linkWrapper" style="position: relative;">
-                    <button onclick="window.open('https://punchlove.bandcamp.com/album/channels');"
+                    <button
                             id="vizButton">
-                        Pre-Order <i>Channels</i> Here
+                        <i>Channels</i> Coming Soon
                     </button>
                 </div>
             </div>            
